# url-shortener

./: .gitignore  README.md
flask-url/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
flask-url/app/: __init__.py  auth_utils.py  config.py  errors.py  extensions.py
flask-url/app/blueprints/: __init__.py
flask-url/app/blueprints/auth/: __init__.py  repository.py  routes.py  service.py
flask-url/app/blueprints/redirect/: __init__.py  repository.py  routes.py  service.py
flask-url/app/blueprints/status/: __init__.py  routes.py
flask-url/app/blueprints/urls/: __init__.py  repository.py  routes.py  service.py
flask-url/app/models/: __init__.py  url.py  user.py
flask-url/app/schemas/: error.py  url.py  user.py
flask-url/bruno/: bruno.json
flask-url/bruno/auth/: login.bru  refresh.bru  register.bru
flask-url/bruno/environments/: local.bru  production.bru
flask-url/bruno/redirect/: redirect.bru
flask-url/bruno/status/: Health Check.bru
flask-url/bruno/urls/: Get URL by Short Code for User.bru  List URLs for User.bru  Shorten URL for User.bru  get-url.bru  list-urls.bru  shorten.bru
flask-url/migrations/versions/: 7258cb01dee9_create_url_table.py  8d24c56ec93c_add_users_table_and_user_id_to_urls.py  ea377e46a373_added_cascade_constraint_to_the_url_.py
flask-url/tests/: conftest.py  test_auth.py  test_redirect.py  test_status.py  test_urls.py
vue-url/: .env.production  .gitignore  README.md  index.html  package-lock.json  (+3 more)
(+27 files in other folders)
