[project]
name = "flask-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"flask> = 3.1.3",
"flask-migrate> = 4.1.0",
"flask-sqlalchemy> = 3.1.1",
"psycopg2-binary> = 2.9.11",
"python-dotenv> = 1.2.2"
]


[dependency-groups]
dev = [ "pytest>=9.0.2", "pytest-flask>=1.3.0" ]
